Demonstrate missing "opens" directive in org.junit.jupiter.api module
See https://github.com/junit-team/junit5/issues/1877